# math-runner

./: .gitignore
backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
backend/migrations/2026-03-11-000001_create_questions/: up.sql
backend/migrations/2026-03-11-000002_create_scores/: up.sql
backend/migrations/2026-03-15-000004_add_name_to_questions/: down.sql  up.sql
backend/src/: app.rs  auth.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  schema.rs  telemetry.rs
backend/src/controllers/: auth.rs  mod.rs  questions.rs  scores.rs
backend/src/models/: auth.rs  mod.rs  question.rs  score.rs
backend/src/repositories/: questions.rs  scores.rs
backend/src/services/: mod.rs  questions.rs  scores.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  auth.js  styles.css
frontend/src/components/: AdminProtectedRoute.jsx
frontend/src/data/: questions.json
frontend/src/pages/: AdminDetailsPage.jsx  AdminListPage.jsx  AdminLoginPage.jsx  AdminPage.jsx  GamePage.jsx  HomePage.jsx
frontend/src/phaser/: PhaserCanvas.jsx  gameConfig.js
frontend/src/phaser/scenes/: EndlessRunnerScene.js
