[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["multipart"] }
base64ct = { version = "1.8.0", features = ["alloc"] }
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.4.0"
diesel = { version = "2.3.3", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.3.0"
dotenvy = "0.15.7"
http = "1.3.1"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
rsa = { version = "0.9.8", features = ["pem"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
rand = "0.8.5"
